Query/QueryParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Query.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class QueryParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, SELECT=2, ORDER=3, BY=4, ASC=5, DESC=6, WHERE=7, FIRST=8, LAST=9, 
		NULLS=10, ALL=11, AS=12, DISTINCT=13, REGEXP=14, AND=15, OR=16, LPAREN=17, 
		RPAREN=18, LBRACE=19, RBRACE=20, LBRACK=21, RBRACK=22, SEMI=23, COMMA=24, 
		GT=25, LT=26, NOT=27, EQ=28, NEQ=29, LE=30, GE=31, ADD=32, SUB=33, MUL=34, 
		DIV=35, MOD=36, ID=37, INT=38, TRUE=39, FALSE=40, DOUBLE=41, WHITESPACE=42, 
		STRING=43;
	public const int
		RULE_program = 0, RULE_statement_list = 1, RULE_statement = 2, RULE_where_clause = 3, 
		RULE_order_by_clause = 4, RULE_order_list = 5, RULE_order_item = 6, RULE_order = 7, 
		RULE_nulls = 8, RULE_sel_list = 9, RULE_sel_item = 10, RULE_sel_modifier = 11, 
		RULE_sel_expr = 12, RULE_cond_expr = 13, RULE_cond_expr_no_gt = 14, RULE_and_expr = 15, 
		RULE_and_expr_no_gt = 16, RULE_not_expr = 17, RULE_not_expr_no_gt = 18, 
		RULE_bool_expr = 19, RULE_bool_expr_no_gt = 20, RULE_basic_expr = 21, 
		RULE_fact_expr = 22, RULE_neg_expr = 23, RULE_term_expr = 24, RULE_identifier = 25, 
		RULE_string_const = 26, RULE_bool_const = 27, RULE_int_const = 28, RULE_double_const = 29, 
		RULE_expr_list_opt = 30, RULE_expr_list = 31, RULE_expr_list_no_gt = 32, 
		RULE_rel_op = 33, RULE_rel_op_no_gt = 34, RULE_error = 35;
	public static readonly string[] ruleNames = {
		"program", "statement_list", "statement", "where_clause", "order_by_clause", 
		"order_list", "order_item", "order", "nulls", "sel_list", "sel_item", 
		"sel_modifier", "sel_expr", "cond_expr", "cond_expr_no_gt", "and_expr", 
		"and_expr_no_gt", "not_expr", "not_expr_no_gt", "bool_expr", "bool_expr_no_gt", 
		"basic_expr", "fact_expr", "neg_expr", "term_expr", "identifier", "string_const", 
		"bool_const", "int_const", "double_const", "expr_list_opt", "expr_list", 
		"expr_list_no_gt", "rel_op", "rel_op_no_gt", "error"
	};

	private static readonly string[] _LiteralNames = {
		null, "'error'", "'SELECT'", "'ORDER'", "'BY'", "'ASC'", "'DESC'", "'WHERE'", 
		"'FIRST'", "'LAST'", "'NULLS'", "'ALL'", "'AS'", "'DISTINCT'", "'REGEXP'", 
		null, null, "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'>'", 
		"'<'", "'!'", "'=='", "'!='", "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", 
		"'%'", null, null, "'true'", "'false'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, "SELECT", "ORDER", "BY", "ASC", "DESC", "WHERE", "FIRST", 
		"LAST", "NULLS", "ALL", "AS", "DISTINCT", "REGEXP", "AND", "OR", "LPAREN", 
		"RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "GT", 
		"LT", "NOT", "EQ", "NEQ", "LE", "GE", "ADD", "SUB", "MUL", "DIV", "MOD", 
		"ID", "INT", "TRUE", "FALSE", "DOUBLE", "WHITESPACE", "STRING"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Query.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static QueryParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public QueryParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public QueryParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public Statement_listContext statement_list() {
			return GetRuleContext<Statement_listContext>(0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72; statement_list(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Statement_listContext : ParserRuleContext {
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public Statement_listContext statement_list() {
			return GetRuleContext<Statement_listContext>(0);
		}
		public ITerminalNode SEMI() { return GetToken(QueryParser.SEMI, 0); }
		public Statement_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement_list; } }
		public override void EnterRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.EnterStatement_list(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.ExitStatement_list(this);
		}
	}

	[RuleVersion(0)]
	public Statement_listContext statement_list() {
		return statement_list(0);
	}

	private Statement_listContext statement_list(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Statement_listContext _localctx = new Statement_listContext(Context, _parentState);
		Statement_listContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_statement_list, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 75; statement();
			}
			Context.Stop = TokenStream.LT(-1);
			State = 82;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Statement_listContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_statement_list);
					State = 77;
					if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
					State = 78; Match(SEMI);
					State = 79; statement();
					}
					} 
				}
				State = 84;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public ITerminalNode SELECT() { return GetToken(QueryParser.SELECT, 0); }
		public Sel_listContext sel_list() {
			return GetRuleContext<Sel_listContext>(0);
		}
		public Where_clauseContext where_clause() {
			return GetRuleContext<Where_clauseContext>(0);
		}
		public Order_by_clauseContext order_by_clause() {
			return GetRuleContext<Order_by_clauseContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85; Match(SELECT);
			State = 86; sel_list(0);
			State = 88;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				State = 87; where_clause();
				}
				break;
			}
			State = 91;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				{
				State = 90; order_by_clause();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Where_clauseContext : ParserRuleContext {
		public ITerminalNode WHERE() { return GetToken(QueryParser.WHERE, 0); }
		public Cond_exprContext cond_expr() {
			return GetRuleContext<Cond_exprContext>(0);
		}
		public Where_clauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_where_clause; } }
		public override void EnterRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.EnterWhere_clause(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.ExitWhere_clause(this);
		}
	}

	[RuleVersion(0)]
	public Where_clauseContext where_clause() {
		Where_clauseContext _localctx = new Where_clauseContext(Context, State);
		EnterRule(_localctx, 6, RULE_where_clause);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93; Match(WHERE);
			State = 94; cond_expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Order_by_clauseContext : ParserRuleContext {
		public ITerminalNode ORDER() { return GetToken(QueryParser.ORDER, 0); }
		public ITerminalNode BY() { return GetToken(QueryParser.BY, 0); }
		public Order_listContext order_list() {
			return GetRuleContext<Order_listContext>(0);
		}
		public Order_by_clauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_order_by_clause; } }
		public override void EnterRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.EnterOrder_by_clause(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.ExitOrder_by_clause(this);
		}
	}

	[RuleVersion(0)]
	public Order_by_clauseContext order_by_clause() {
		Order_by_clauseContext _localctx = new Order_by_clauseContext(Context, State);
		EnterRule(_localctx, 8, RULE_order_by_clause);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96; Match(ORDER);
			State = 97; Match(BY);
			State = 98; order_list(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Order_listContext : ParserRuleContext {
		public Order_itemContext order_item() {
			return GetRuleContext<Order_itemContext>(0);
		}
		public Order_listContext order_list() {
			return GetRuleContext<Order_listContext>(0);
		}
		public ITerminalNode COMMA() { return GetToken(QueryParser.COMMA, 0); }
		public Order_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_order_list; } }
		public override void EnterRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.EnterOrder_list(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.ExitOrder_list(this);
		}
	}

	[RuleVersion(0)]
	public Order_listContext order_list() {
		return order_list(0);
	}

	private Order_listContext order_list(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Order_listContext _localctx = new Order_listContext(Context, _parentState);
		Order_listContext _prevctx = _localctx;
		int _startState = 10;
		EnterRecursionRule(_localctx, 10, RULE_order_list, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 101; order_item();
			}
			Context.Stop = TokenStream.LT(-1);
			State = 108;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Order_listContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_order_list);
					State = 103;
					if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
					State = 104; Match(COMMA);
					State = 105; order_item();
					}
					} 
				}
				State = 110;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Order_itemContext : ParserRuleContext {
		public Cond_exprContext cond_expr() {
			return GetRuleContext<Cond_exprContext>(0);
		}
		public OrderContext order() {
			return GetRuleContext<OrderContext>(0);
		}
		public NullsContext nulls() {
			return GetRuleContext<NullsContext>(0);
		}
		public Order_itemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_order_item; } }
		public override void EnterRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.EnterOrder_item(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.ExitOrder_item(this);
		}
	}

	[RuleVersion(0)]
	public Order_itemContext order_item() {
		Order_itemContext _localctx = new Order_itemContext(Context, State);
		EnterRule(_localctx, 12, RULE_order_item);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111; cond_expr(0);
			State = 113;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				State = 112; order();
				}
				break;
			}
			State = 116;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				{
				State = 115; nulls();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OrderContext : ParserRuleContext {
		public ITerminalNode ASC() { return GetToken(QueryParser.ASC, 0); }
		public ITerminalNode DESC() { return GetToken(QueryParser.DESC, 0); }
		public OrderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_order; } }
		public override void EnterRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.EnterOrder(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.ExitOrder(this);
		}
	}

	[RuleVersion(0)]
	public OrderContext order() {
		OrderContext _localctx = new OrderContext(Context, State);
		EnterRule(_localctx, 14, RULE_order);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118;
			_la = TokenStream.LA(1);
			if ( !(_la==ASC || _la==DESC) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NullsContext : ParserRuleContext {
		public ITerminalNode NULLS() { return GetToken(QueryParser.NULLS, 0); }
		public ITerminalNode FIRST() { return GetToken(QueryParser.FIRST, 0); }
		public ITerminalNode LAST() { return GetToken(QueryParser.LAST, 0); }
		public NullsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_nulls; } }
		public override void EnterRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.EnterNulls(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.ExitNulls(this);
		}
	}

	[RuleVersion(0)]
	public NullsContext nulls() {
		NullsContext _localctx = new NullsContext(Context, State);
		EnterRule(_localctx, 16, RULE_nulls);
		try {
			State = 124;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 120; Match(NULLS);
				State = 121; Match(FIRST);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 122; Match(NULLS);
				State = 123; Match(LAST);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Sel_listContext : ParserRuleContext {
		public Sel_itemContext sel_item() {
			return GetRuleContext<Sel_itemContext>(0);
		}
		public Sel_listContext sel_list() {
			return GetRuleContext<Sel_listContext>(0);
		}
		public ITerminalNode COMMA() { return GetToken(QueryParser.COMMA, 0); }
		public Sel_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sel_list; } }
		public override void EnterRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.EnterSel_list(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.ExitSel_list(this);
		}
	}

	[RuleVersion(0)]
	public Sel_listContext sel_list() {
		return sel_list(0);
	}

	private Sel_listContext sel_list(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Sel_listContext _localctx = new Sel_listContext(Context, _parentState);
		Sel_listContext _prevctx = _localctx;
		int _startState = 18;
		EnterRecursionRule(_localctx, 18, RULE_sel_list, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 127; sel_item();
			}
			Context.Stop = TokenStream.LT(-1);
			State = 134;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Sel_listContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_sel_list);
					State = 129;
					if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
					State = 130; Match(COMMA);
					State = 131; sel_item();
					}
					} 
				}
				State = 136;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Sel_itemContext : ParserRuleContext {
		public Sel_exprContext sel_expr() {
			return GetRuleContext<Sel_exprContext>(0);
		}
		public Sel_modifierContext sel_modifier() {
			return GetRuleContext<Sel_modifierContext>(0);
		}
		public ITerminalNode AS() { return GetToken(QueryParser.AS, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public Sel_itemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sel_item; } }
		public override void EnterRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.EnterSel_item(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.ExitSel_item(this);
		}
	}

	[RuleVersion(0)]
	public Sel_itemContext sel_item() {
		Sel_itemContext _localctx = new Sel_itemContext(Context, State);
		EnterRule(_localctx, 20, RULE_sel_item);
		int _la;
		try {
			State = 148;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 138;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==ALL || _la==DISTINCT) {
					{
					State = 137; sel_modifier();
					}
				}

				State = 140; sel_expr();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 142;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==ALL || _la==DISTINCT) {
					{
					State = 141; sel_modifier();
					}
				}

				State = 144; sel_expr();
				State = 145; Match(AS);
				State = 146; identifier();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Sel_modifierContext : ParserRuleContext {
		public ITerminalNode ALL() { return GetToken(QueryParser.ALL, 0); }
		public ITerminalNode DISTINCT() { return GetToken(QueryParser.DISTINCT, 0); }
		public Sel_modifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sel_modifier; } }
		public override void EnterRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.EnterSel_modifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.ExitSel_modifier(this);
		}
	}

	[RuleVersion(0)]
	public Sel_modifierContext sel_modifier() {
		Sel_modifierContext _localctx = new Sel_modifierContext(Context, State);
		EnterRule(_localctx, 22, RULE_sel_modifier);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 150;
			_la = TokenStream.LA(1);
			if ( !(_la==ALL || _la==DISTINCT) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Sel_exprContext : ParserRuleContext {
		public Cond_exprContext cond_expr() {
			return GetRuleContext<Cond_exprContext>(0);
		}
		public Sel_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sel_expr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.EnterSel_expr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IQueryListener typedListener = listener as IQueryListener;
			if (typedListener != null) typedListener.ExitSel_expr(this);
		}
	}

	[RuleVersion(0)]
	public Sel_exprContext sel_expr() {
		Sel_exprContext _localctx = new Sel_exprContext(Context, State);
		EnterRule(_localctx, 24, RULE_sel_expr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 152; cond_expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
